--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="location.html">Расположение</a>
+    <a href="plans.html">Планировки</a>
     
 </body>
 </html>
